--- a/templates/home.html
+++ b/templates/home.html
@@ -2,5 +2,5 @@
   {% include 'nowplaying.html' %}
 </div>
 <div id="search" class="center">
-  <a href="/search">Search</a>
+  <a href="/search" onclick="window.open('/search','popup','width=600,height=600'); return false;">Search</a>
 </div>
