--- a/templates/search.html
+++ b/templates/search.html
@@ -2,7 +2,9 @@
   <head>
     <meta name="viewport" content="width=device-width,minimum-scale=1,initial-scale=1">
     <link rel="stylesheet" href="/main.css"/>
+    <link rel="icon" href="/favicon.png">
     <script src="/main.js" type="text/javascript"></script>
+    <title>Music Search</title>
   </head>
   <body>
     <div id="searchmenu" class="center">
@@ -37,13 +39,6 @@
     {% elif q %}
     <div>No results</div>
     {% endif %}
-    <script type="text/javascript">
-      var ws = new WebSocket('ws://'+window.location.hostname+':8080/');
-      let x = false
-      ws.onmessage = () => {
-        if (x) window.location.reload();
-        x = true
-      }
-    </script>
+    {% if debug %}<script src="/ws.js" type="text/javascript"></script>{% endif %}
   </body>
 </html>
