--- a/templates/nowplaying.html
+++ b/templates/nowplaying.html
@@ -19,7 +19,11 @@
         </div><!--nowplaying-->
       </div>
       <br>
-      {% if local %}<div class="center"><form action="/nowplaying" onsubmit="formSubmit(event)" method="POST"><input type="submit" name="submit" value="Skip"></form></div>{% endif %}
+      {% if local %}<div class="center">
+        <form action="/nowplaying" onsubmit="formSubmit(event)" method="POST">
+          <input type="submit" name="submit" value="Skip">
+        </form>
+      </div>{% endif %}
       <div id="queue">
         <div class="center"><h4>Up next</h4></div>
         <div class="contents">
@@ -44,4 +48,4 @@
             </li>{% endfor %}{% endif %}
           </ol>
         </div>
-        </div><!--queue-->
+      </div><!--queue-->
