--- a/templates/index.html
+++ b/templates/index.html
@@ -14,6 +14,7 @@
       <div id="search" class="center">
         <form action="/search" onsubmit="popup(event); return false;" ><input type="submit" value="Library"></form>
         <form action="/playlist/" onsubmit="popup(event); return false;" ><input type="submit" value="Playlists"></form>
+        {% if local and snapcastURL %}<form action="{{ snapcastURL }}" onsubmit="popup(event); return false;" ><input type="submit" value="Volume"></form>{% endif %}
       </div>
     </div>
     <script type="text/javascript">
